--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,33 @@
 
-  
+  .vid {
+    margin-left: 0;
+  }
   /* Add some content at the bottom of the video/page */
   .content {
     background: rgba(0, 0, 0, 0.5);
     color: #f1f1f1;
     width: 100%;
     padding: 20px;
+    
+    
   }
   
   /* Style the button used to pause/play the video */
   .button {
-    width: 200px;
+    width: 25vw;
+    height: 25vw;
     font-size: 18px;
     padding: 10px;
     border: none;
-    background: #000;
-    color: #fff;
+    background: rgb(48, 51, 51);
+    color: rgb(255, 253, 253);
     cursor: pointer;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
   }
   .button:hover {
     background: #ddd;
