--- a/public/style.css
+++ b/public/style.css
@@ -29,6 +29,22 @@
     transform: translate(-50%, -50%);
     border-radius: 50%;
   }
+  .button2 {
+    width: 25vw;
+    height: 10vw;
+    font-size: 18px;
+    padding: 10px;
+    border: none;
+    background: rgb(48, 51, 51);
+    color: rgb(255, 253, 253);
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+
+  }
   .button:hover {
     background: #ddd;
     color: black;
