--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,25 @@
 
-  .vid {
-    margin-left: 0;
+  html {
+    height: 100%;
+    max-width: 100%;
   }
+  body, html {
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
+      border: 0;
+      outline: 0;
+      font-size: 100%;
+      vertical-align: baseline;
+      background: transparent;
+  }
+  
   /* Add some content at the bottom of the video/page */
   .content {
     background: rgba(0, 0, 0, 0.5);
     color: #f1f1f1;
     width: 100%;
     padding: 20px;
-    
-    
   }
   
   /* Style the button used to pause/play the video */
@@ -17,7 +27,7 @@
     width: 25vw;
     height: 25vw;
     font-size: 18px;
-    padding: 10px;
+    padding: 0px;
     border: none;
     background: rgb(48, 51, 51);
     color: rgb(255, 253, 253);
