--- a/public/style.css
+++ b/public/style.css
@@ -2,16 +2,17 @@
   html {
     height: 100%;
     max-width: 100%;
+    overflow: hidden;
   }
   body, html {
     min-height: 100%;
     margin: 0;
     padding: 0;
-      border: 0;
-      outline: 0;
-      font-size: 100%;
-      vertical-align: baseline;
-      background: transparent;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
   }
   
   /* Add some content at the bottom of the video/page */
@@ -24,22 +25,39 @@
   
   /* Style the button used to pause/play the video */
   .button {
-    width: 25vw;
-    height: 25vw;
+    width: 35.55vw;
+    height: 11.1vw;
     font-size: 18px;
     padding: 0px;
-    border: none;
-    background: rgb(48, 51, 51);
-    color: rgb(255, 253, 253);
+    border: 0;
     cursor: pointer;
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 90%;
+    left: 28%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    border-radius: 50%;
+    background:url(/img/DC_button_1.png) ; 
+    background-size: cover;
+    z-index: 13;
   }
   .button2 {
+    width: 70.5vw;
+    height: 11vw;
+    font-size: 18px;
+    border: 0;
+    padding: 0px;
+    cursor: pointer;
+    position: absolute;
+    top: 90%;
+    left: 41%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    background:url(/img/DC_button_2.png); 
+    background-size: cover;
+    z-index: 10;
+  }
+
+  .button3 {
     width: 25vw;
     height: 10vw;
     font-size: 18px;
@@ -49,14 +67,107 @@
     color: rgb(255, 253, 253);
     cursor: pointer;
     position: absolute;
+    
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 
   }
-  .button:hover {
-    background: #ddd;
-    color: black;
+
+  .image { 
+    position: absolute;
+    z-index: 11;
+    margin:0;
+     /* object-fit:fill;  */
+    height:100%;
+    width:100%;
+    background-image:url(/img/DC_1.png);
+    background-repeat: no-repeat;
+    /* background-position:center;*/
+     background-size: cover;  
+    /* overflow-y: hidden; */
+    transition-property: all; 
+	  transition-duration: 1.5s;
+	  transition-timing-function: cubic-bezier(0, 0.05, 0.5, 1, 0.05);
   }
+
+  .image2 { 
+    position: absolute;
+    z-index: 9;
+    margin:0;
+    /* object-fit:cover; */
+    height:100%;
+    width:100%;
+    background-image:url(/img/DC_2.png);
+    background-repeat: no-repeat;
+    /* background-position:center; */
+    background-size: cover;
+    /* overflow-y: hidden; */
+    transition-property: all; 
+	  transition-duration: 1.5s;
+	  transition-timing-function: cubic-bezier(0, 0.05, 0.5, 1, 0.05);
+    
+  }
+
+  .image3 { 
+    position: absolute;
+    z-index: -1;
+    margin:0;
+    /* object-fit:cover; */
+    height:100%;
+    width:100%;
+    background-image:url(/img/placeholder.png);
+    background-repeat: no-repeat;
+    /* background-position:center; */
+    background-size: cover;
+    /* overflow-y: hidden; */
+    transition-property: all; 
+	  transition-duration: 1.5s;
+	  transition-timing-function: cubic-bezier(0, 0.05, 0.5, 1, 0.05);
+    
+  }
+
+  .fade {
+    /*  opacity: 0; */
+    transform: translate(0%, -100%);
+  }
+
+  .lds-ripple {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-ripple div {
+    position: absolute;
+    border: 4px solid #fff;
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+  .lds-ripple div:nth-child(2) {
+    animation-delay: -0.5s;
+  }
+  @keyframes lds-ripple {
+    0% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 1;
+    }
+    100% {
+      top: 0px;
+      left: 0px;
+      width: 72px;
+      height: 72px;
+      opacity: 0;
+    }
+  }
+  @font-face {
+    font-family: myfont;
+    src: url(/timefont.otf);
+  }
+
   
