--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,7 @@
     margin:0;
     width:100%;
     height:205%;
-    background-image:url(/img/WP-DC-Anna.jpg);
+    background-image:url(/img/placeholder.jpg);
     background-repeat: no-repeat;
     /* background-position:center;*/
     background-size: 100% 100%;
